chore: fix spacing for components

--- a/src/components/Comment/Comment.module.css
+++ b/src/components/Comment/Comment.module.css
@@ -9,11 +9,11 @@
 }
 
 .fullname {
-  @apply font-medium text-sm pr-1;
+  @apply font-semibold text-xs md:text-sm pr-1 text-gray-700;
 }
 /* Content */
 .content {
-  @apply text-sm text-gray-700 py-1.5 break-words whitespace-pre-line;
+  @apply text-xs md:text-sm text-gray-700 py-1 break-words whitespace-pre-line;
 }
 
 /* Footer */
