--- a/src/features/Profile/Profile.module.css
+++ b/src/features/Profile/Profile.module.css
@@ -14,7 +14,7 @@
 }
 
 .fullname {
-  @apply text-2xl font-bold;
+  @apply text-2xl font-semibold;
 }
 
 .username {
